Penambahan fitur list pendaftar

--- a/src/app/pages/dashboard/pieChart/pieChart.scss
+++ b/src/app/pages/dashboard/pieChart/pieChart.scss
@@ -1,7 +1,7 @@
 @import "../../../theme/sass/conf/conf";
 
 :host /deep/.pie-charts {
-  color: $content-text;
+  color: #000;
 
   .pie-chart-item-container {
     position: relative;
