--- a/src/app/pages/dashboard/pieChart/pieChart.html
+++ b/src/app/pages/dashboard/pieChart/pieChart.html
@@ -3,7 +3,8 @@
   <ba-card *ngFor="let chart of charts" class="pie-chart-item-container col-xlg-3 col-lg-3 col-md-6 col-sm-12 col-12">
 
     <div class="pie-chart-item">
-      <div class="chart" [attr.data-rel]="chart.color" data-percent="60">
+      <div class="chart" data-rel="rgba(0,0,0,1)" data-percent="60">
+      <!--  [attr.data-rel]="chart.color" -->
         <span class="percent"></span>
       </div>
       <div class="description">
