--- a/src/app/pages/registrant/appstoday/appstoday.html
+++ b/src/app/pages/registrant/appstoday/appstoday.html
@@ -1,6 +1,6 @@
 <div class="widgets">
     <div class="row">
-        <ba-card title="News Publication" baCardClass="with-scroll" class="data-table-container">
+        <ba-card title="AppsToday" baCardClass="with-scroll" class="data-table-container">
             <div class="row">
                 <div class="col-sm-2">
                     <label class="label-control">Rows on page</label>
@@ -18,10 +18,8 @@
                         <div class="offset-sm-1 col-sm-5">
                             <div class="row">
                                 <select class="form-control input-sm" [(ngModel)]="sortBy">
-                                    <option ngValue="judul_news">Title</option>
-                                    <option ngValue="isi_news">Content</option>
-                                    <option ngValue="createdAt">Published Date</option>
-                                    <option ngValue="updatedAt">Last Modified</option>
+                                    <option ngValue="nama_team">Team Name</option>
+                                    <option ngValue="nama_app">Apps Name</option>
                                 </select>
                             </div>
                         </div>
@@ -40,45 +38,55 @@
             <div class="panel panel-default">
                 <!-- <div class="panel-heading">Berita yang dipublikasikan</div> -->
                 <div class="panel-heading"></div>
-                <table class="table table-striped" [mfData]="data | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
+                <table class="table table-striped" [mfData]="apps | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
                     <thead>
                         <tr>
+                        		<th style="width: 5%">
+                                #
+                            </th>
                             <th style="width: 20%">
-                                <mfDefaultSorter by="judul_news">Title</mfDefaultSorter>
+                                <mfDefaultSorter by="nama_team">Team Name</mfDefaultSorter>
                             </th>
-                            <th style="width: 30%">
-                                <mfDefaultSorter by="isi_news">Content</mfDefaultSorter>
+                            <th style="width: 20%">
+                                <mfDefaultSorter by="nama_app">Apps Name</mfDefaultSorter>
                             </th>
-                            <th style="width: 15%">
-                                <mfDefaultSorter by="createdAt">Published Date</mfDefaultSorter>
+                            <th style="width: 10%">
+                                <mfDefaultSorter by="proposal_app">Proposal</mfDefaultSorter>
                             </th>
-                            <th style="width: 15%">
-                                <mfDefaultSorter by="updatedAt">Last Modified</mfDefaultSorter>
+                            <th style="width: 5%">
+                               Semifinal
                             </th>
-                            <th style="width: 20%">Option</th>
+                            <th style="width: 5%">
+                               Final
+                            </th>
+                            <th style="width: 10%" class="text-right">Option</th>
                         </tr>
                         <tr>
-                            <th colspan="5">
-                                Filter by Title:
+                            <th colspan="7">
+                                Filter by Team Name:
                                 <input class="form-control" [(ngModel)]="filterQuery" />
                             </th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let item of mf.data">
-                            <td>{{item.judul_news}}</td>
-                            <td [innerHtml]="item.isi_news | truncate:50"></td>
-                            <td>{{item.createdAt | date:'short'}}</td>
-                            <td>{{item.updatedAt | date:'short'}}</td>
-                             <td>
-                                <button (click)="edit(item.id)" class="btn btn-info">Edit</button>
-                                <button (click)="remove(item.id)" class="btn btn-danger">Hapus</button>
+                        <tr *ngFor="let item of mf.data; let j=index">
+                            <td>{{(mf.activePage-1)*10+(j+1)}}</td>
+                            <td>{{item.nama_team}}</td>
+                            <td>{{item.nama_app}}</td>
+                            <td *ngIf="item.proposal_app != null"><a href="{{item.proposal_app}}">Link</a></td>
+                            <td *ngIf="item.proposal_app == null">Not Available</td>
+                            <td style="text-align: center" *ngIf="item.semifinalis_team"><i class="ion-checkmark-round"></i></td>
+                            <td style="text-align: center" *ngIf="!item.semifinalis_team"><i class="ion-close-round"></i></td>
+                            <td style="text-align: center" *ngIf="item.finalis_team"><i class="ion-checkmark-round"></i></td>
+                            <td style="text-align: center" *ngIf="!item.finalis_team"><i class="ion-close-round"></i></td>
+                             <td class="text-right">
+                                <button (click)="view(item.id)" class="btn btn-info">Details</button>
                             </td>
                         </tr>
                     </tbody>
                     <tfoot>
                         <tr>
-                            <td colspan="5">
+                            <td colspan="7">
                                 <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
                             </td>
                         </tr>
