--- a/src/app/pages/registrant/participant/participant.html
+++ b/src/app/pages/registrant/participant/participant.html
@@ -1,6 +1,6 @@
 <div class="widgets">
     <div class="row">
-        <ba-card title="News Publication" baCardClass="with-scroll" class="data-table-container">
+        <ba-card title="IT Today 2017 Participants" baCardClass="with-scroll" class="data-table-container">
             <div class="row">
                 <div class="col-sm-2">
                     <label class="label-control">Rows on page</label>
@@ -18,10 +18,10 @@
                         <div class="offset-sm-1 col-sm-5">
                             <div class="row">
                                 <select class="form-control input-sm" [(ngModel)]="sortBy">
-                                    <option ngValue="judul_news">Title</option>
-                                    <option ngValue="isi_news">Content</option>
-                                    <option ngValue="createdAt">Published Date</option>
-                                    <option ngValue="updatedAt">Last Modified</option>
+                                    <option ngValue="nama_user">Name</option>
+                                    <option ngValue="email_user">e-mail</option>
+                                    <option ngValue="telepon_user">Phone</option>
+                                    <option ngValue="institusi_user">Institution</option>
                                 </select>
                             </div>
                         </div>
@@ -40,45 +40,48 @@
             <div class="panel panel-default">
                 <!-- <div class="panel-heading">Berita yang dipublikasikan</div> -->
                 <div class="panel-heading"></div>
-                <table class="table table-striped" [mfData]="data | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
+                <table class="table table-striped" [mfData]="users | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
                     <thead>
                         <tr>
+                    		    <th style="width: 10%">
+                                #
+                            </th>
                             <th style="width: 20%">
-                                <mfDefaultSorter by="judul_news">Title</mfDefaultSorter>
+                                <mfDefaultSorter by="nama_user">Name</mfDefaultSorter>
                             </th>
-                            <th style="width: 30%">
-                                <mfDefaultSorter by="isi_news">Content</mfDefaultSorter>
-                            </th>
-                            <th style="width: 15%">
-                                <mfDefaultSorter by="createdAt">Published Date</mfDefaultSorter>
+                            <th style="width: 20%">
+                                <mfDefaultSorter by="email_user">e-mail</mfDefaultSorter>
                             </th>
                             <th style="width: 15%">
-                                <mfDefaultSorter by="updatedAt">Last Modified</mfDefaultSorter>
+                                <mfDefaultSorter by="telepon_user">Phone</mfDefaultSorter>
                             </th>
-                            <th style="width: 20%">Option</th>
+                            <th style="width: 15%">
+                                <mfDefaultSorter by="institusi_user">Institution</mfDefaultSorter>
+                            </th>
+                            <th style="width: 10%">Option</th>
                         </tr>
                         <tr>
-                            <th colspan="5">
-                                Filter by Title:
+                            <th colspan="6">
+                                Filter by Name:
                                 <input class="form-control" [(ngModel)]="filterQuery" />
                             </th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let item of mf.data">
-                            <td>{{item.judul_news}}</td>
-                            <td [innerHtml]="item.isi_news | truncate:50"></td>
-                            <td>{{item.createdAt | date:'short'}}</td>
-                            <td>{{item.updatedAt | date:'short'}}</td>
+                        <tr *ngFor="let item of mf.data; let j=index">
+                            <td>{{(mf.activePage-1)*10+(j+1)}}</td>
+                            <td>{{item.nama_user}}</td>
+                            <td>{{item.email_user}}</td>
+                            <td>+62{{item.telepon_user}}</td>
+                            <td>{{item.institusi_user}}</td>
                              <td>
-                                <button (click)="edit(item.id)" class="btn btn-info">Edit</button>
-                                <button (click)="remove(item.id)" class="btn btn-danger">Hapus</button>
+                                <button (click)="view(item.id)" class="btn btn-info">Details</button>
                             </td>
                         </tr>
                     </tbody>
                     <tfoot>
                         <tr>
-                            <td colspan="5">
+                            <td colspan="6">
                                 <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
                             </td>
                         </tr>
