--- a/src/app/pages/registrant/hacktoday/hacktoday.html
+++ b/src/app/pages/registrant/hacktoday/hacktoday.html
@@ -1,6 +1,6 @@
 <div class="widgets">
     <div class="row">
-        <ba-card title="AppsToday" baCardClass="with-scroll" class="data-table-container">
+        <ba-card title="HackToday" baCardClass="with-scroll" class="data-table-container">
             <div class="row">
                 <div class="col-sm-2">
                     <label class="label-control">Rows on page</label>
@@ -64,7 +64,7 @@
                     <tbody>
                         <tr *ngFor="let item of mf.data; let j=index">
                             <td>{{(mf.activePage-1)*10+(j+1)}}</td>
-                            <td>{{item.nama_team}}</td>
+                            <td><span *ngIf="item.diskualifikasi_team" style="color:red">[DISQUALIFIED]&nbsp;</span>{{item.nama_team}}</td>
                             <td *ngIf="item.writeup_hack != null"><a href="{{item.writeup_hack}}">Link</a></td>
                             <td *ngIf="item.writeup_hack == null">Not Available</td>
                             <td style="text-align: center" *ngIf="item.finalis_team"><i class="ion-checkmark-round"></i></td>
