--- a/src/app/pages/registrant/viewsingle/single.html
+++ b/src/app/pages/registrant/viewsingle/single.html
@@ -72,7 +72,7 @@
           <div class="row">
           	<div class="col-sm-12">
 	          	<button class="btn btn-success">Send custom e-mail</button>
-	          	<button class="btn btn-danger">Delete user</button>
+	          	<!-- <button class="btn btn-danger">Inactivate user</button> -->
           	</div>
           </div>
         </div>
