--- a/src/app/pages/dashboard/pieChart/pieChart.scss
+++ b/src/app/pages/dashboard/pieChart/pieChart.scss
@@ -70,7 +70,7 @@
     font-size: 16px;
   }
   .percent:after {
-    content: '%';
+    content: '';
     margin-left: 0.1em;
     font-size: .8em;
   }
