--- a/src/app/pages/registrant/appstoday/appstoday.html
+++ b/src/app/pages/registrant/appstoday/appstoday.html
@@ -20,6 +20,9 @@
                                 <select class="form-control input-sm" [(ngModel)]="sortBy">
                                     <option ngValue="nama_team">Team Name</option>
                                     <option ngValue="nama_app">Apps Name</option>
+                                    <option ngValue="semifinalis_team">Semifinal</option>
+                                    <option ngValue="finalis_team">Final</option>
+                                    <option ngValue="status_pembayaran_app">Payment Status</option>
                                 </select>
                             </div>
                         </div>
@@ -44,25 +47,28 @@
                         		<th style="width: 5%">
                                 #
                             </th>
-                            <th style="width: 20%">
+                            <th style="width: 15%">
                                 <mfDefaultSorter by="nama_team">Team Name</mfDefaultSorter>
                             </th>
-                            <th style="width: 20%">
+                            <th style="width: 15%">
                                 <mfDefaultSorter by="nama_app">Apps Name</mfDefaultSorter>
                             </th>
-                            <th style="width: 10%">
+                            <th style="width: 12%">
                                 <mfDefaultSorter by="proposal_app">Proposal</mfDefaultSorter>
                             </th>
                             <th style="width: 5%">
-                               Semifinal
+                               <mfDefaultSorter by="semifinalis_team">Semifinal</mfDefaultSorter>
                             </th>
                             <th style="width: 5%">
-                               Final
+                               <mfDefaultSorter by="finalis_team">Final</mfDefaultSorter>
+                            </th>
+                            <th style="width: 5%">
+                               <mfDefaultSorter by="status_pembayaran_app">Payment Status</mfDefaultSorter>
                             </th>
                             <th style="width: 10%" class="text-right">Option</th>
                         </tr>
                         <tr>
-                            <th colspan="7">
+                            <th colspan="8">
                                 Filter by Team Name:
                                 <input class="form-control" [(ngModel)]="filterQuery" />
                             </th>
@@ -74,11 +80,13 @@
                             <td><span *ngIf="item.diskualifikasi_team" style="color:red">[DISQUALIFIED]&nbsp;</span>{{item.nama_team}}</td>
                             <td>{{item.nama_app}}</td>
                             <td *ngIf="item.proposal_app != null"><a href="{{item.proposal_app}}">Link</a></td>
-                            <td *ngIf="item.proposal_app == null">Not Available</td>
+                            <td *ngIf="item.proposal_app == null">-</td>
                             <td style="text-align: center" *ngIf="item.semifinalis_team"><i class="ion-checkmark-round"></i></td>
                             <td style="text-align: center" *ngIf="!item.semifinalis_team"><i class="ion-close-round"></i></td>
                             <td style="text-align: center" *ngIf="item.finalis_team"><i class="ion-checkmark-round"></i></td>
                             <td style="text-align: center" *ngIf="!item.finalis_team"><i class="ion-close-round"></i></td>
+                            <td style="text-align: center" *ngIf="item.status_pembayaran_app"><i class="ion-checkmark-round"></i></td>
+                            <td style="text-align: center" *ngIf="!item.status_pembayaran_app"><i class="ion-close-round"></i></td>
                              <td class="text-right">
                                 <button (click)="view(item.id)" class="btn btn-info">Details</button>
                             </td>
@@ -86,7 +94,7 @@
                     </tbody>
                     <tfoot>
                         <tr>
-                            <td colspan="7">
+                            <td colspan="8">
                                 <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
                             </td>
                         </tr>
