--- a/src/app/pages/registrant/seminar/seminar.html
+++ b/src/app/pages/registrant/seminar/seminar.html
@@ -33,6 +33,10 @@
                         </div>
                     </div>
                 </div>
+                <div class="offset-sm-4 col-sm-2">
+                    <label class="label-control">Options</label>
+                    <button type="button" (click)="generateCsv()" class="btn btn-success">Export to CSV</button>
+                </div>
             </div>
             <div class="panel panel-default">
                 <!-- <div class="panel-heading">Berita yang dipublikasikan</div> -->
