--- a/src/app/pages/registrant/viewsingle/single.html
+++ b/src/app/pages/registrant/viewsingle/single.html
@@ -67,14 +67,14 @@
           	</div>
           </div>
           <div class="separator"></div>
-         	<h2>Options</h2>
+         	<!-- <h2>Options</h2>
          	<div class="separator"></div>
           <div class="row">
           	<div class="col-sm-12">
 	          	<button class="btn btn-success">Send custom e-mail</button>
-	          	<!-- <button class="btn btn-danger">Inactivate user</button> -->
+	          	<button class="btn btn-danger">Inactivate user</button>
           	</div>
-          </div>
+          </div> -->
         </div>
       </ba-card>
     </div>
