--- a/src/app/pages/registrant/viewteam/team.html
+++ b/src/app/pages/registrant/viewteam/team.html
@@ -167,7 +167,7 @@
               </div>
             </div>
           	<div class="col-sm-6" style="text-align: right">
-	          	<button class="btn btn-success">Send custom e-mail</button>
+	          	<!-- <button class="btn btn-success">Send custom e-mail</button> -->
 
 	          	<button (click)="disqualify(true)" *ngIf="teaminfo.diskualifikasi_team == false" class="btn btn-danger">Disqualify Team</button>
               <button (click)="disqualify(false)" *ngIf="teaminfo.diskualifikasi_team == true" class="btn btn-danger">Undo Disqualifying</button>
